--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ Temporary Items
 .apdisk
 
 # vscode
-.vscode/*
+.vscode/
 
 # npm stuff
-node_modules/*
+node_modules/
 
 # End of https://www.gitignore.io/api/web,macos
