added daylight page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "moment": "^2.29.1",
+        "node-fetch": "^2.6.1",
         "pm2": "^4.5.0",
         "pug": "^3.0.0"
     }
