--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "moment": "^2.29.1",
-        "node-fetch": "^2.6.1",
+        "moment-timezone": "^0.5.32",
         "pm2": "^4.5.0",
         "pug": "^3.0.0"
     }
