--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "website",
     "version": "1.0.0",
     "engines": {
-        "node": "12.18.x"
+        "node": "17.3.x"
     },
     "description": "Personal website for Skyler Wittman",
     "main": "index.js",
@@ -24,16 +24,17 @@
     },
     "homepage": "https://github.com/SkylerWittman/website#readme",
     "devDependencies": {
-        "browser-sync": "^2.26.13",
-        "nodemon": "^2.0.6"
+        "browser-sync": "^2.27.7",
+        "npm-check-updates": "^12.0.5",
+        "nodemon": "^2.0.15"
     },
     "dependencies": {
-        "autoprefixer": "^10.2.1",
-        "express": "^4.17.1",
+        "autoprefixer": "^10.4.0",
+        "express": "^4.17.2",
         "moment": "^2.29.1",
-        "moment-timezone": "^0.5.32",
-        "pm2": "^4.5.0",
-        "pug": "^3.0.0",
-        "tailwindcss": "^2.0.2"
+        "moment-timezone": "^0.5.34",
+        "pm2": "^5.1.2",
+        "pug": "^3.0.2",
+        "tailwindcss": "^3.0.7"
     }
 }
