--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "description": "Personal website for Skyler Wittman",
     "main": "index.js",
     "scripts": {
+        "build:css": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css",
+        "build:css:local": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css --watch",
         "dev": "nodemon ./index.js",
         "ui": "browser-sync start --config bs-config.js",
         "prod": "pm2 start ./index.js",
         "production": "pm2 start ./index.js",
-        "build:css": "tailwindcss build -i ./src/input.css -o ./dist/style.css --watch"
+        "start": "npm run build:css && npm run dev"
     },
     "repository": {
         "type": "git",
@@ -26,11 +28,12 @@
     "homepage": "https://github.com/SkylerWittman/website#readme",
     "devDependencies": {
         "browser-sync": "^2.27.7",
-        "npm-check-updates": "^12.0.5",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "npm-check-updates": "^12.0.5"
     },
     "dependencies": {
         "autoprefixer": "^10.4.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.2",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.34",
