--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build:css:watch": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css --watch",
         "dev": "nodemon ./index.js",
         "ui": "npm run build:css && npm run dev && browser-sync start --config bs-config.js",
-        "prod": "pm2 start ./index.js",
+        "prod": "npm install && npm run build:css && npm run pm2-start",
+        "pm2-start": "pm2 start ./index.js",
         "start": "npm run build:css && npm run dev"
     },
     "repository": {
@@ -32,11 +33,14 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.2",
+        "debug": "^4.3.3",
         "ejs": "^3.1.6",
         "express": "^4.17.2",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.34",
         "pm2": "^5.1.2",
-        "tailwindcss": "^3.0.12"
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.12",
+        "uuid": "^8.3.2"
     }
 }
