--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     },
     "homepage": "https://github.com/SkylerWittman/website#readme",
     "devDependencies": {
-        "browser-sync": "^2.27.7",
-        "nodemon": "^2.0.15",
-        "npm-check-updates": "^16.6.2"
+        "browser-sync": "^2.27.12",
+        "debug": "^4.3.4",
+        "nodemon": "^2.0.20",
+        "npm-check-updates": "^16.7.9"
     },
     "dependencies": {
-        "autoprefixer": "^10.4.2",
-        "debug": "^4.3.3",
+        "autoprefixer": "^10.4.13",
         "ejs": "^3.1.8",
-        "express": "^4.17.2",
+        "express": "^4.18.2",
         "moment": "^2.29.4",
-        "moment-timezone": "^0.5.34",
-        "pm2": "^5.1.2",
-        "postcss": "^8.4.5",
-        "tailwindcss": "^3.2.4",
-        "uuid": "^8.3.2"
+        "moment-timezone": "^0.5.40",
+        "pm2": "^5.2.2",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7",
+        "typescript": "^4.9.5",
+        "uuid": "^9.0.0"
     }
 }
