--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     },
     "description": "Personal website for Skyler Wittman",
     "main": "dist/index.ts",
-    "type": "module",
     "scripts": {
         "prebuild": "eslint -c eslintrc.json -p tsconfig.json --fix",
         "build:css": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css",
         "build:css:watch": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css --watch",
         "dev": "nodemon ./src/index.ts",
         "ui": "yarn run build:css && yarn run dev && browser-sync start --config bs-config.js",
-        "prod": "yarn install && yarn run build:css && yarn run pm2-start",
+        "prod": "yarn install && yarn run build:css && yarn run start-prod",
         "production": "yarn run prod",
-        "pm2-start": "pm2 start ./src/index.ts",
-        "start": "yarn run build:css && yarn run dev"
+        "pm2-start-dev": "./node_modules/.bin/pm2 start --watch ./src/index.ts",
+        "start": "yarn run build:css && yarn run dev",
+        "start-prod": "yarn run build:css && node ./dist/index.js"
     },
     "repository": {
         "type": "git",
@@ -30,7 +30,8 @@
     },
     "homepage": "https://github.com/SkylerWittman/website#readme",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "@typescript-eslint/parser": "^5.53.0",
         "browser-sync": "^2.27.12",
         "debug": "^4.3.4",
         "eslint-config-standard-with-typescript": "^34.0.0",
@@ -42,6 +43,7 @@
     },
     "dependencies": {
         "@types/express": "^4.17.17",
+        "@types/node": "^18.14.2",
         "autoprefixer": "^10.4.13",
         "ejs": "^3.1.8",
         "eslint": "^8.0.1",
